cmake_minimum_required(VERSION 3.22)
project("Fortran-CUDA-Interface")
enable_language(CUDA Fortran)
include(CheckLanguage)
check_language(CUDA)
add_library(array_sum STATIC array_sum.cu array_sum_kernel.cu)
add_executable(fortran_cuda_interface main.F90)
target_compile_features(fortran_cuda_interface INTERFACE cxx_std_11)
target_link_libraries(fortran_cuda_interface array_sum)
